fixed spacing on desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 .current-weather {
-    margin: 30px;
+    margin: 30px 10px 30px 10px;
     opacity: 80%;
     width: 40%;
     height: 40%
@@ -72,6 +72,11 @@ li {
     flex-direction: row;
     width: 98%;
     margin: 20px auto;
+    align-items: center;
+}
+
+.perday { 
+    /* height : 90% */
 }
 
 
